--- a/auth/dangnhap.html
+++ b/auth/dangnhap.html
@@ -20,7 +20,8 @@
             border-radius: 16px;
             box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
             display: flex;
-            width: 500px;
+            width: 600px;
+            height: 300px;
             padding: 32px;
         }
 
@@ -98,9 +99,7 @@
             text-decoration: underline;
         }
 
-        .form-links span {
-            margin: 0 8px;
-        }
+        
     </style>
 </head>
 <body>
