--- a/auth/quenmatkhau.html
+++ b/auth/quenmatkhau.html
@@ -21,6 +21,7 @@
             box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
             display: flex;
             width: 600px;
+            height: 250px;
             padding: 32px;
         }
 
